Did some changes, confused about BodyPublishers and Subscriptions